starting main project. creating notebook to upload trip records into SQL database

--- a/deployment_demo/utils/data_ingestion.ipynb
+++ b/deployment_demo/utils/data_ingestion.ipynb
@@ -383,6 +383,80 @@
     "    row[\"id\"] = str(i + 1)\n",
     "    container.create_item(row)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res = []\n",
+    "mi_string = list(\"abcd\")\n",
+    "n = len(mi_string)\n",
+    "def find_anagram(arr_string,l,r):\n",
+    "    global res\n",
+    "    if r == n-1:\n",
+    "        return [\"\".join(arr_string)]\n",
+    "\n",
+    "    for r in range(l,n):\n",
+    "        #switch \n",
+    "        arr_string[l],arr_string[r] = arr_string[r],arr_string[l]\n",
+    "        res = res + find_anagram(arr_string,l+1,r)\n",
+    "    return res\n",
+    "\n",
+    "#l 3 2 1\n",
+    "#abcd , abdc , acbd, acdb, adbc, adcb, \n",
+    "\n",
+    "#permutations of bcd -> bcd, bdc, cbd, cdb, dbc, dcb\n",
+    "#permutations of abcd -> abcd, abdc, acbd, acdb, adbc, adcb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dic1 = {\n",
+    "    \"a\" : 1,\n",
+    "    \"b\" : 1,\n",
+    "    \"c\" : 1\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dic2 = {\n",
+    "    \"b\" : 1,\n",
+    "    \"a\" : 1,\n",
+    "    #\"c\" : 1,\n",
+    "    #\"e\" : 0\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dic1 == dic2"
+   ]
   }
  ],
  "metadata": {
